[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
phf = { version = "0.11", features = ["macros"] }
regex = "1"
